fix main api
